WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266329
REGRESSION(
271747@main
): [Win][GPUP] Rendering artifact of AC mode
https://bugs.webkit.org/show_bug.cgi?id=266329
Summary
REGRESSION(271747@main): [Win][GPUP] Rendering artifact of AC mode
Fujii Hironori
Reported
2023-12-12 23:43:20 PST
271892@main
fixes a rendering artifact of non-AC mode. AC mode still has a problem. 1. Start Windows MiniBrowser 2. Go to
https://webkit.org/
3. Moving a mouse cursor on hyperlinked texts
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-12-13 22:27:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21780
EWS
Comment 2
2023-12-15 11:57:09 PST
Committed
272141@main
(9af7d54818e8): <
https://commits.webkit.org/272141@main
> Reviewed commits have been landed. Closing PR #21780 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-12-15 11:58:18 PST
<
rdar://problem/119731387
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug