REGRESSION(271747@main): [Win][GPUP] Rendering artifact of AC mode https://bugs.webkit.org/show_bug.cgi?id=266329

Reviewed by Don Olmstead.

After 271747@main removed RemoteImageBufferProxy::createFlusher
implementation, repainting a window caused a rendering artifact for
Windows port. 271803@main and 271892@main were the previous attempt to
fix the problem. But they were wrong fixes.

This problem can be resoved just by using newly added
RemoteImageBufferSetProxy::flushFrontBufferAsync even though Windows
port doesn't use RemoteImageBufferSetProxy yet. Because both
RemoteImageBufferSet and RemoteImageBuffer are using a same
StreamWorkQueue, flushing RemoteImageBufferSet command also ensures
that preceding RemoteImageBuffer commands are also flushed.

* Source/WebKit/WebProcess/WebPage/wc/DrawingAreaWC.cpp:
* Source/WebKit/WebProcess/WebPage/wc/DrawingAreaWC.h:

Canonical link: https://commits.webkit.org/272141@main